# fastembed-api

./: DEV_SETUP.md  Dockerfile  README.md  app.py  pyproject.toml
.devcontainer/: devcontainer.json
