[tool.poetry]
name = "fastembed-api"
version = "0.1.0"
description = "Fast Embed API"
authors = ["Chi Cuong Le <chicuongle@protonmail.com>"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastembed = "*"
fastapi = "*"
uvicorn = "*"
sentence-transformers = "*"
# Remove torch dependency to let fastembed/sentence-transformers resolve it, 
# or use a more standard source if absolutely needed.
# torch = { version = "*", source = "torch-cpu" } 

# [[tool.poetry.source]]
# name = "torch-cpu"
# url = "https://download.pytorch.org/whl/cpu"
# priority = "explicit"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
